objects/modigie__Modigie_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>modigie__About_Modigie__c</fullName>
        <label>About Modigie</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>modigie__Api_key__c</fullName>
        <label>Api key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Credits_Account_Id__c</fullName>
        <label>Credits Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Customer_Id__c</fullName>
        <label>Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Private_key__c</fullName>
        <label>Private key</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Service_Account_Credentials__c</fullName>
        <label>Service Account Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Modigie Credentials</label>
    <listViews>
        <fullName>modigie__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Modigie Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modigie Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>